<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     >
    <item  
        android:id="@+id/action_settings"  
        android:icon="@drawable/ic_launcher"  
        android:orderInCategory="100"  
        android:showAsAction="ifRoom|withText"  
        android:title="@string/action_settings">  
        <menu>  
            <item  
                android:id="@+id/create_new"  
                android:title="新建文件"/>  
            <item  
                android:id="@+id/open"  
                android:title="打开文件"/>  
        </menu>  
    </item>  

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/actionbar_add_icon"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
     <menu>  
             
       
    <item
        android:id="@+id/action_group_chat"
        android:icon="@drawable/ofm_group_chat_icon"
        android:title="@string/action_group_chat"/>
    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/ofm_add_icon"
        android:title="@string/action_add_friend"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ofm_qrcode_icon"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_feed"
        android:icon="@drawable/ofm_feedback_icon"
        android:title="@string/action_feed"/>
 </menu>  

</menu>
